standard-yaml/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30002
  selector:
    app: fastapi
