standard-yaml/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: standard
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql
